# misis2023f-22-3-zebelyan-a-v

./: CMakeLists.txt  README.md  cmake_test.txt  codeforces.id  status.md
docs/: .md
prj.codeforces/: 0001a.cpp  0059a.cpp  0071a.cpp  0110a.cpp  0122a.cpp  0158a.cpp  0200b.cpp  0231a.cpp  0236a.cpp  0266a.cpp  0281a.cpp  0282a.cpp  0344a.cpp  0466c.cpp  0489c.cpp  0546a.cpp  0580c.cpp  0617a.cpp  0791a.cpp  0977a.cpp  0978b.cpp  1351c.cpp  1360b.cpp  1367b.cpp  1385b.cpp  1742b.cpp  1760b.cpp  1791b.cpp  1850b.cpp  1873b.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  Doxy
prj.cw/project/: CMakeLists.txt
prj.cw/project/code/: CMakeLists.txt  morph.cpp  morphing_fuction.cpp  simur.cpp
prj.cw/project/code/include/: morph.hpp
prj.cw/project/examples/: CMakeLists.txt  e_1.cpp  e_2.cpp  e_3.cpp  e_4.cpp  e_5.cpp  e_6.cpp
prj.cw/project/models/: models.txt
