set(CMAKE_CXX_STANDARD 20)

add_executable(0001a 0001a.cpp)
add_executable(0059a 0059a.cpp)
add_executable(0071a 0071a.cpp)
add_executable(0110a 0110a.cpp)
add_executable(0122a 0122a.cpp)
add_executable(0158a 0158a.cpp)
add_executable(0200b 0200b.cpp)
add_executable(0231a 0231a.cpp)
add_executable(0236a 0236a.cpp)
add_executable(0266a 0266a.cpp)
add_executable(0281a 0281a.cpp)
add_executable(0282a 0282a.cpp)
add_executable(0344a 0344a.cpp)
add_executable(1873b 1873b.cpp)
add_executable(1850b 1850b.cpp)
add_executable(1791b 1791b.cpp)
add_executable(1760b 1760b.cpp)
add_executable(1742b 1742b.cpp)
add_executable(1385b 1385b.cpp)
add_executable(1367b 1367b.cpp)
add_executable(1360b 1360b.cpp)
add_executable(1351c 1351c.cpp)
add_executable(0978b 0978b.cpp)
add_executable(0977a 0977a.cpp)
add_executable(0791a 0791a.cpp)
add_executable(0617a 0617a.cpp)
add_executable(0580c 0580c.cpp)
add_executable(0546a 0546a.cpp)
add_executable(0489c 0489c.cpp)
add_executable(0466c 0466c.cpp)
