#add_executable(example1 e_1.cpp)
add_executable(example2 e_2.cpp)
#add_executable(example3 e_3.cpp)
#add_executable(example4 e_4.cpp)
#add_executable(example4 e_5.cpp)
#add_executable(example4 e_6.cpp)

#target_link_libraries(example1 morphs)
target_link_libraries(example2 morphs)
#target_link_libraries(example3 morphs)
#target_link_libraries(example4 morphs)
#target_link_libraries(example5 morphs)
#target_link_libraries(example6 morphs)
